// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionInMempool shoud render correctly with different width 1`] = `
<View
  style={
    {
      "height": "100%",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "gap": 12,
        "height": "100%",
        "justifyContent": "center",
        "paddingLeft": 32,
        "paddingRight": 32,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          undefined,
          false,
        ]
      }
    >
      Your bitcoin transaction is pending...

You can go do something else, we'll automatically publish your offer as soon as it's finished!
    </Text>
    <View
      onLayout={[Function]}
      testID="image-container"
    >
      <Image
        resizeMode="contain"
        source={
          {
            "testUri": "../../../src/assets/escrow/tx-in-mempool.png",
          }
        }
        style={
          {
            "height": 70,
            "width": 100,
          }
        }
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
                {
                  "textDecorationLine": "underline",
                },
              ],
              false,
            ]
          }
        >
          show in explorer
        </Text>
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 20,
                "width": 20,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionInMempool should render correctly 1`] = `
<View
  style={
    {
      "height": "100%",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "gap": 12,
        "height": "100%",
        "justifyContent": "center",
        "paddingLeft": 32,
        "paddingRight": 32,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          undefined,
          false,
        ]
      }
    >
      Your bitcoin transaction is pending...

You can go do something else, we'll automatically publish your offer as soon as it's finished!
    </Text>
    <View
      onLayout={[Function]}
      testID="image-container"
    >
      <Image
        resizeMode="contain"
        source={
          {
            "testUri": "../../../src/assets/escrow/tx-in-mempool.png",
          }
        }
        style={
          {
            "height": 210,
            "width": 300,
          }
        }
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
                {
                  "textDecorationLine": "underline",
                },
              ],
              false,
            ]
          }
        >
          show in explorer
        </Text>
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 20,
                "width": 20,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
